adjusted z index of information buffer div to make sure it covers scroll icon

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
         background: #333333FF;
         color: white;
         height: 100vh;
-        z-index: 2;
+        z-index: 3;
         padding: 1em;
         font-size: 2em;
         position: relative;
@@ -58,6 +58,7 @@ body {
         height: 35vh;
         width: 100vw;
         background: #333333FF;
+        z-index: 2;
     }
 
     #arran {
